Prevent white-space in ‘Read more’ text from wrapping

--- a/assets/src/css/_components.review.scss
+++ b/assets/src/css/_components.review.scss
@@ -81,4 +81,8 @@
 			margin: 0 0 $wpbr-space;
 		}
 	}
+
+	&__omission {
+		white-space: nowrap;
+	}
 }
